# txio

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  ROADMAP.md  TODO.md  docker-compose.yml  package-lock.json  package.json  ruleset.json  vercel.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: audit.yml  build.yml  ci.yml  codeql.yml  publish.yml
backend/: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
backend/.github/workflows/: ci.yml
backend/api/: .env.example  CHANGELOG_password_verification.md  Cargo.toml  Dockerfile
backend/api/src/: lib.rs  main.rs
backend/api/src/api/handlers/: admin_handler.rs  auth_handler.rs  collection_handler.rs  mod.rs  terminal_handler.rs
backend/api/src/api/routers/: admin_router.rs  ai_router.rs  auth_router.rs  collection_router.rs  mod.rs  terminal_router.rs
backend/api/src/dtos/: admin_dtos.rs  collection_dtos.rs  mod.rs  request.rs  response.rs
backend/api/src/infra/: db.rs
backend/api/src/model/: collection.rs  mod.rs  otp.rs  request.rs  rpc.rs  user.rs
backend/api/src/repositories/: collection_repository.rs  mod.rs  otp_repository.rs  request_repository.rs  rpc_repository.rs  user_repository.rs  workspace_repository.rs
backend/api/src/services/: admin_service.rs  ai_service.rs  auth_service.rs  collection_service.rs  email_service.rs  mod.rs  otp_service.rs  sui_service.rs  terminal_service.rs
backend/api/src/utils/: auth_jwt.rs  config.rs  error.rs  generate_otp.rs  logger.rs  mod.rs
cli/: Cargo.toml  README.md
cli/src/: main.rs
cli/src/chains/: aptos.rs  ethereum.rs  mod.rs  solana.rs  soroban.rs  sui.rs  validation.rs
cli/src/cli/: format.rs  handlers.rs  mod.rs  parser.rs
cli/src/utils/: mod.rs
desktop/: README.md  package-lock.json  package.json
desktop/src/: index.html  index.js
desktop/src/assets/: index-BMrvhauZ.js  index-BXSSIwaD.css
frontend/: Dockerfile  README.md  index.html  metadata.json  next.config.ts  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts  vitest.setup.ts
frontend/src/: App.tsx  Layout.tsx  main.tsx
frontend/src/app/: globals.css
frontend/src/app/workspace/: page.tsx
frontend/src/components/: CommandPalette.tsx  EntranceAnimation.tsx  Layout.tsx  NetworkSwitcherModal.tsx  RedirectManager.tsx  Select.tsx  SignTransactionModal.tsx  TerminalPanel.tsx
frontend/src/components/AuthModal/: AuthModal.tsx  LoginSignupForm.tsx  ProfileSidebar.tsx  types.ts
frontend/src/components/AuthModal/tabs/: ApiKeysTab.tsx  GeneralTab.tsx  SecurityTab.tsx  TeamTab.tsx  types.ts
frontend/src/components/RequestPanel/: HeaderBar.tsx  RequestPanel.tsx  RequestTabs.tsx  types.ts
frontend/src/components/RequestPanel/ai/: VariableInput.tsx
frontend/src/components/RequestPanel/builders/: RPCBuilder.tsx  TransactionBuilder.tsx
frontend/src/components/RequestPanel/editors/: CodeSnippet.tsx  HooksEditor.tsx  RawEditor.tsx  TestsEditor.tsx
frontend/src/components/ResponsePanel/: EmptyState.tsx  LoadingState.tsx  ResponseHeader.tsx  ResponsePanel.tsx  ResponseTabs.tsx  types.ts
frontend/src/components/ResponsePanel/utils/: syntaxHighlighter.tsx  testUtils.ts
frontend/src/components/ResponsePanel/veiws/: EffectsView.tsx  EventsView.tsx  MetaView.tsx  PrettyView.tsx  RawView.tsx
frontend/src/components/RightPanel/: RightPanel.tsx
frontend/src/components/RightPanel/Tabs/: AnalysisTab.tsx  DiscussTab.tsx  ObjectsTab.tsx  WalletTab.tsx  index.ts
frontend/src/components/SideBar/: CollectionTree.test.tsx  CollectionTree.tsx  ContextToolbar.test.tsx  ContextToolbar.tsx  EnvironmentList.tsx  HistoryList.tsx  Sidebar.tsx  SidebarNav.tsx  WorkspaceHeader.tsx  types.ts
frontend/src/components/ui/: Avatar.tsx  JsonEditor.tsx  Tabs.tsx
frontend/src/components/wallet/: ConnectWalletButton.tsx  WalletGlyph.tsx  WalletModal.tsx
frontend/src/features/: AIChat.tsx  AuthPage.tsx  CollectionRunner.tsx  Dashboard.tsx  DocsPage.tsx  EcosystemPage.tsx  FeaturesPage.tsx  GetStartedPage.tsx  History.tsx  InfrastructurePage.tsx  IntegrationsPage.tsx  LandingPage.tsx  MoveBuilder.tsx  NewRequestPage.tsx  OTPPage.tsx  PTBBuilder.tsx  PartnersPage.tsx  Playground.tsx  ProfilePage.tsx  RPCBuilder.tsx  Recipes.tsx  SettingsPage.tsx  SignInPage.tsx  WorkspaceOnboarding.tsx
frontend/src/lib/: constants.ts  store.test.ts  store.ts  terminalLog.ts
frontend/src/services/: api.test.ts  api.ts  mockService.ts  suiService.ts
frontend/src/types/: index.ts
frontend/src/wallet/: descriptors.ts  stellar.ts  types.ts  utils.ts
frontend/src/wallet/provider/: WalletManagerProvider.tsx
scripts/: copy-frontend-out.mjs
