[workspace]
members = [
    "backend/api",
    "cli",
]
resolver = "2"

[workspace.package]
version = "0.1.2"
edition = "2024"
authors = ["txio Contributors"]
license = "MIT"
description = "A universal multi-chain blockchain gateway and CLI suite."
repository = "https://github.com/Kingvic300/txio"
homepage = "https://github.com/Kingvic300/txio"

[workspace.dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tower-http = { version = "0.5", features = ["cors", "trace", "limit"] }
tower = { version = "0.4", features = ["util", "timeout"] }
tower_governor = { version = "0.4.3", default-features = false, features = ["axum"] }
mongodb = { version = "2.8.2", features = ["tokio-runtime"] }
reqwest = { version = "0.11", features = ["json"] }
clap = { version = "4.5", features = ["derive", "suggestions", "env"] }
async-trait = "0.1"
regex = "1.10"
strsim = "0.11"
clap_complete = "4.5"
colored = "2.1"
indicatif = "0.17"
dirs-next = "2.0"
jsonwebtoken = "9.2"
config = "0.14"
rand = "0.8"
validator = { version = "0.16", features = ["derive"] }
bcrypt = "0.15"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
urlencoding = "2.1"
brevo = "1.0.0"
dialoguer = "0.11"
futures = "0.3"
