[package]
name = "flow-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sui-cli"
path = "src/bin/sui_cli.rs"

[[bin]]
name = "list-users"
path = "src/bin/list_users.rs"

[[bin]]
name = "seed-user"
path = "src/bin/seed_user.rs"

[dependencies]
api = { path = "../backend/api" }
clap = { version = "4.4", features = ["derive", "env"] }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
dotenvy = "0.15"
regex = "1.10"
mongodb = "2.8"
serde = { version = "1.0", features = ["derive"] }
