[package]
name = "api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
mongodb = "2.8"
serde = { workspace = true }
serde_json = { workspace = true }
jsonwebtoken = "9.2"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }
thiserror = { workspace = true }
config = "0.14"
chrono = { workspace = true }
rand = "0.8"
uuid = { workspace = true }
dotenvy = { workspace = true }
validator = { version = "0.16", features = ["derive"] }
bcrypt = "0.15"
tower-http = { workspace = true }
brevo = "1.0.0"
clap = { version = "4.4", features = ["derive", "env"] }
regex = "1.12.2"

